[package]
name = "user-panic"
version = "0.1.0"
edition = "2021"
authors = ["Adit Chauhan <chauhan.adit.98@gmail.com>"]
description = "Rust Library Crate for Helpful Error messages"
license = "MIT"
repository= "https://github.com/Adit-Chauhan/user-panic"
readme = "README.md"
keywords = ["panic","panic-handler","yaml","build-scripts"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
yaml-rust = "0.4.5"
